--- a/package.json
+++ b/package.json
@@ -1,50 +1,30 @@
 {
-  "name": "client",
+  "name": "ai_cancer_application",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "yarn build && npx thirdweb@latest upload dist",
-    "db:push": "drizzle-kit push",
-    "db:studio": "npx drizzle-kit studio"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@dnd-kit/core": "6.0.8",
-    "@dnd-kit/sortable": "7.0.2",
-    "@google/generative-ai": "^0.16.0",
-    "@neondatabase/serverless": "^0.9.4",
-    "@privy-io/react-auth": "1.65.0",
-    "@tabler/icons-react": "^3.7.0",
-    "@thirdweb-dev/react": "^3",
-    "@thirdweb-dev/sdk": "^3",
-    "appwrite": "14.0.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.32.1",
-    "ethers": "^5.7.2",
-    "markdown-to-jsx": "^7.4.7",
-    "openai": "^4.52.0",
-    "preline": "^2.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.4.4",
-    "rehype-highlight": "^7.0.0",
-    "rehype-katex": "^7.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0"
+    "@privy-io/react-auth": "^1.82.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^2",
-    "autoprefixer": "^10.4.13",
-    "drizzle-kit": "^0.23.0",
-    "postcss": "^8.4.19",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.2.4",
-    "vite": "^3"
-  },
-  "main": "index.js",
-  "license": "MIT"
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "tailwindcss": "^3.4.10",
+    "vite": "^5.4.1"
+  }
 }
