--- a/package.json
+++ b/package.json
@@ -6,25 +6,50 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "yarn build && npx thirdweb@latest upload dist",
+    "db:push": "drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^1.82.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@dnd-kit/core": "6.0.8",
+    "@dnd-kit/sortable": "7.0.2",
+    "@google/generative-ai": "^0.16.0",
+    "@neondatabase/serverless": "^0.9.4",
+    "@privy-io/react-auth": "1.65.0",
+    "@tabler/icons-react": "^3.7.0",
+    "@thirdweb-dev/react": "^3",
+    "@thirdweb-dev/sdk": "^3",
+    "appwrite": "14.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.32.1",
+    "ethers": "^5.7.2",
+    "markdown-to-jsx": "^7.4.7",
+    "openai": "^4.52.0",
+    "preline": "^2.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.4.4",
+    "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
   }
 }
